# Orbiads-GAM-MCP

./: .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.fr.md  README.md  glama.json  install.sh  server.json  server.py  version.json
cli/: CLI_ROUTE_EXEMPTIONS.yaml  MCP_TO_REST.yaml  PARITY.md  README.md  parity-matrix.json  pyproject.toml
cli/scripts/: gen_parity_matrix.py
cli/src/orbiads_cli/: __init__.py  client.py  config.py  errors.py  main.py  output.py
cli/src/orbiads_cli/commands/: ad_review.py  advertisers.py  api.py  audiences.py  audit_log.py  auth.py  billing.py  campaigns.py  contacts.py  (+25 more)
cli/tests/: conftest.py  test_100_8_campaigns_media_plan.py  test_61_4_sweep.py  test_61_5_reporting.py  test_61_6_inventory.py  test_61_7_sweep.py  test_62_1_cli.py  test_62_3_cli.py  test_62_4_cli.py  test_62_5_62_6_cli.py  test_62_extractions_cli.py  test_66_1_reporting_skill.py  test_73_10_public_catalogue_coverage.py  test_73_3_cli_network_settings.py  test_73_4_cli_inventory_mutations.py  test_73_5_cli_reporting_links.py  test_73_6_cli_inventory_blueprint.py  test_73_7_cli_inventory_diagnostics.py  test_73_8_cli_programmatic.py  test_73_9_cli_features_gate.py  test_75_3_creatives_upload.py  test_75_5_creatives_upload_url.py  test_75_6_creatives_upload_video.py  test_83_4_10_preset_suggestions_cli.py  test_api_passthrough.py  test_auth.py  test_client.py  test_commands.py  test_creative_wrappers_cli.py  test_exit_codes.py  test_inventory_commands_v2.py  test_live_stream_cli.py  test_mcm_cli.py  test_network.py  test_output.py  test_parity_matrix.py
(+412 files in other folders)
