[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orbiads-cli"
version = "1.0.1"
description = "OrbiAds CLI — Google Ad Manager from the command line"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "OrbiAds", email = "contact@orbiads.com" },
]
keywords = ["google-ad-manager", "gam", "cli", "adtech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "typer[all]>=0.12.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.scripts]
orbiads = "orbiads_cli.main:app"

[project.urls]
Homepage = "https://orbiads.com"
Documentation = "https://orbiads.com/docs/cli"
Repository = "https://github.com/OrbiAds/Orbiads-GAM-MCP"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "respx>=0.21"]

[tool.hatch.build.targets.wheel]
packages = ["src/orbiads_cli"]
